Fix longstanding search box alignment/padding issue

--- a/static/style.css
+++ b/static/style.css
@@ -3,7 +3,7 @@ body,button{background:#1a1a1a;color:#cfcfcf;font-family:sans-serif;margin:0;pos
 a{color:#add8e6;text-decoration:none}
 input[type="url"], input[type="text"] {background:#1a1a1a;color:#cfcfcf;border:1px solid gray;margin: 8px;padding:8px;outline: none; box-sizing: border-box}
 input[type="url"]:focus, input[type="text"]:focus{border:1px solid white;background-color:#3a3a3a}
-div#search-container form {border-left:1px solid gray}
+div#search-container {border-left:1px solid gray; display: flex; align-items: center}
 span.required {color: red}
 textarea {background: unset; color: #cfcfcf}
 textarea:focus {outline: none}
